# GuitarFlow

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
deprecated_code/: base_collector.py
deprecated_code/pixabay/: pixabay_collector.py
src/: app_settings.py  config.py  directory_manager.py  globals.py  logging_manager.py  prediction.py
src/app/: app.py  app_models.py  app_settings.py  image_metadata.py  streamlit_app.py
src/collectors/: base_collector.py  pixabay_collector.py
src/config/: globals.py  paths.py
src/data_collecting/: collect_data_main.py  collector_database.py  data_collection_main.py  data_dir_manager.py  data_main.py  image_metadata_db.py  metadata_models_enums.py
src/data_collecting/collectors/: base_collector.py  collector_models.py  collector_models_enums.py  extract_unsplash_image_id.py  image_download_manager.py  pixabay_collector.py
src/data_collecting/collectors/pixabay/: pixabay_collector.py
src/data_mawari/: data_dir_manager.py
src/data_mawari/collectors/: base_collector.py  collector_models.py  pixabay_collector.py
src/data_mawari/data_collecting/: collect_data_main.py
src/models/: prediction.py
src/monitoring/: app_monitoring_datadog.py  logging_manager.py
src/schemas/: inference_event.py
src/utils/: dt_timestamps.py  filesize_int.py  get_dt_now.py  list_filepaths.py  read_dotenv.py
