[project]
name = "guitarflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datadog-api-client>=2.54.0",
    "ipykernel>=6.31.0",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.6.1",
    "streamlit>=1.50.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
